# Showcase

AdvancedTopics/bitwise_operations/: a.out  bitwise_operations_01.c
AdvancedTopics/compound_literals/: a.out  compound_literals_task.c
AdvancedTopics/multithreading_and_concurrency/: multithreading_02.c  multithreading_03.c
AdvancedTopics/struct_padding_and_packing/: a.out
AdvancedTopics/unions/: union_example.c
AdvancedTopics/variadic_functions/: a.out  variadic_function_01.c
AdvancedTopics/volatile_variables/: a.out  volatile.c
GilbertZennerPortfolioWebsite/: app.html
HTMLCSS/HTMLWebsite2/: index.html  style.css
HTMLCSSWebsite/: index.html  style.css
Javascript/JavascriptWebsite1/: index.html  script.js  style.css
Javascript/JavascriptWebsite2/: index.html  script.js  style.css
TryoutGithubCoPilot/: a.out  calculator.html  expenses.html  ft_sqrt.c  pomodore.html  recipes.html  todo.html  todo2.html  weater.html
Tutorials/HTMLCSSJS1/: app.js  (+3 more)
experiments/: Test.java  filledfile.txt  fillfile.c
fractal_files/: CMakeLists.txt  draw_juliaset.c  draw_mandelbrot.c  fractal.h  main.c
privatelibft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_itoa.c  ft_lstnew.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c  ft_toupper.c  libft.h  make.sh
selfmade/: index.html  style.css
(+127 files in other folders)
